exports['api explore should accept buffer with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 2999,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2316,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 2316
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2999 bytes (0.03%)"
    }
  ]
}

exports['api explore should accept buffers with js and map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data calculating gzip size 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 392,
      "mappedBytes": 510,
      "eolBytes": 1,
      "sourceMapCommentBytes": 55,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 300
        },
        "src/bar.js": {
          "size": 108
        },
        "src/foo.js": {
          "size": 102
        },
        "[sourceMappingURL]": {
          "size": 55
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 1576,
      "mappedBytes": 510,
      "eolBytes": 1,
      "sourceMapCommentBytes": 1208,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 300
        },
        "src/bar.js": {
          "size": 108
        },
        "src/foo.js": {
          "size": 102
        },
        "[sourceMappingURL]": {
          "size": 1208
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data excluding source map bytes 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 683,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    },
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 683,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2316,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    },
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data respecting onlyMapped and replace options 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with referenced map 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data when provided with file with separated map file 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-map-comment.js",
      "totalBytes": 682,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 0,
      "sourceMapCommentBytes": 0,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 0
        },
        "[unmapped]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/no-map-comment.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/682 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data when provided with js file with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 2999,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2316,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 2316
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2999 bytes (0.03%)"
    }
  ]
}

exports['api explore should give name to "null" source a name 1'] = {
  "bundles": [
    {
      "bundleName": "data/null-source.js",
      "totalBytes": 7856,
      "mappedBytes": 1006,
      "unmappedBytes": 13,
      "eolBytes": 1,
      "sourceMapCommentBytes": 6836,
      "files": {
        "webpack:///webpack/bootstrap": {
          "size": 897
        },
        "[no source]": {
          "size": 32
        },
        "webpack:///tests/generate-data/src/foo.js": {
          "size": 35
        },
        "webpack:///tests/generate-data/src/bar.js": {
          "size": 42
        },
        "[sourceMappingURL]": {
          "size": 6836
        },
        "[unmapped]": {
          "size": 13
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/null-source.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 13/7856 bytes (0.17%)"
    }
  ]
}

exports['api explore when output format specified should generate JSON 1'] = `
{
  "results": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "mappedBytes": 681,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "../../node_modules/browser-pack/_prelude.js": {
          "size": 480
        },
        "src/bar.js": {
          "size": 104
        },
        "src/foo.js": {
          "size": 97
        },
        "[sourceMappingURL]": {
          "size": 35
        },
        "[unmapped]": {
          "size": 1
        },
        "[EOLs]": {
          "size": 1
        }
      }
    }
  ]
}
`

exports['api explore when output format specified should generate TSV 1'] = `
Source\tSize\r
../../node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[sourceMappingURL]\t35\r
[unmapped]\t1\r
[EOLs]\t1\r
\r
[sourceMappingURL]\t2316\r
../../node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[unmapped]\t1\r
[EOLs]\t1
`
